[package]
name = "rust_set_compare"
version = "1.0.0"
author = "Travis Phillips"
description = "Compare two data set text files and print stats about them."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"